--- a/main.html
+++ b/main.html
@@ -8,6 +8,21 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="post">
+
+		<input id="name" type="text" placeholder="Name"/>
+		<input id="phone" type="text" placeholder="Phone Number"/>
+		<input id="address" type="text" placeholder="Address"/>
+		<p><input id="checkbox" type="checkbox"/>Have you ever lived with a Dog before?</p>
+			<select id="multiSelect" type="select">
+				<option>a</option>
+				<option>c</option>
+				<option>d</option>
+			</select>
+
+	   <input id="submit" type="submit" value="Submit"/>
+		
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
