--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 		<input id="name" type="text" placeholder="Name"/>
 		<input id="phone" type="text" placeholder="Phone Number"/>
 		<input id="address" type="text" placeholder="Address"/>
-		<p><input id="checkbox" type="checkbox"/>Have you ever lived with a Dog before?</p>
+		<p><input id="checkbox" type="checkbox" value="Have you ever lived with a Dog before?"/>Have you ever lived with a Dog before?</p>
 			<select id="multiSelect" type="select">
 				<option>a</option>
 				<option>c</option>
